--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^2.0.0",
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "mongodb": "^2.1.19",
-    "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "morgan": "~1.0.0"
   }
 }
