--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "mongodb": "^2.1.19",
-    "morgan": "~1.0.0"
+    "morgan": "~1.0.0",
+    "request": "^2.72.0"
   }
 }
